# webthing-cpp

./: .gitignore  CMakeLists.txt  LICENSE.txt  build.bat  build.sh  index.html  readme.md  vcpkg-no-ssl.json  vcpkg-with-ssl.json  vcpkg.json
.github/workflows/: cmake.yml  coverage.yml  macos.yml  ubuntu.yml  windows.yml
coverage-report/: cmd_line  index-sort-f.html  index-sort-l.html  index.html
coverage-report/webthing/: action.hpp.func-c.html  action.hpp.func.html  action.hpp.gcov.html  errors.hpp.func-c.html  errors.hpp.func.html  errors.hpp.gcov.html  event.hpp.func-c.html  event.hpp.func.html  event.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  json_validator.hpp.func-c.html  json_validator.hpp.func.html  json_validator.hpp.gcov.html  mdns.hpp.func-c.html  mdns.hpp.func.html  mdns.hpp.gcov.html  property.hpp.func-c.html  property.hpp.func.html  property.hpp.gcov.html  server.hpp.func-c.html  server.hpp.func.html  server.hpp.gcov.html  storage.hpp.func-c.html  storage.hpp.func.html  storage.hpp.gcov.html  thing.hpp.func-c.html  thing.hpp.func.html  thing.hpp.gcov.html  utils.hpp.func-c.html  utils.hpp.func.html  utils.hpp.gcov.html  value.hpp.func-c.html  value.hpp.func.html  value.hpp.gcov.html  webthing.hpp.func-c.html  webthing.hpp.func.html  webthing.hpp.gcov.html
examples/: CMakeLists.txt  gui-html.hpp  gui-html.hpp.in  gui-thing.cpp  gui.html  multiple-things.cpp  single-thing.cpp
include/bw/webthing/: action.hpp  constants.hpp  errors.hpp  event.hpp  json.hpp  json_validator.hpp  mdns.hpp  property.hpp  server.hpp  storage.hpp  thing.hpp  utils.hpp  value.hpp  version.hpp  webthing.hpp
test/: CMakeLists.txt  coverage.sh
test/catch2/unit-tests/: action_tests.cpp  event_tests.cpp  json_validator_tests.cpp  property_tests.cpp  server_http_tests.cpp  server_tests.cpp  server_ws_tests.cpp  thing_tests.cpp  utils_tests.cpp  version_tests.cpp
test/jmeter/: webthing-cpp-test.jmx
test/k6/: load-test.js
test/unit-test/: action_tests.cpp  event_tests.cpp  json_validator_tests.cpp  property_tests.cpp  server_tests.cpp  storage_tests.cpp  thing_tests.cpp  utils_tests.cpp  value_tests.cpp  webthing_tests.cpp
test/webthing-tester/: run-webthing-tester-windows.py  run-webthing-tester.sh
tools/: create-pems.sh  install-vcpkg.bat  install-vcpkg.sh  run-webthing-tester-windows.py  run-webthing-tester.sh  update-version.py
tools/templates/: version.hpp.in
